# jumper_jupyter_performance

./: .gitignore  README.md  mkdocs.yml  multinode_srun_example.py  pyproject.toml  run_multinode_srun_example.sh
.binder/: Dockerfile
.github/workflows/: docs.yml  formatter.yml  linter.yml  publish.yml  test.yml
demos/: bali_example.ipynb  metric_demo.ipynb
docs/: index.md
docs/guides/: custom-collector.md  custom-monitor.md  live-plotting.md  plot-export.md  script-export.md  session-transfer.md  visualizing-custom-collector-metrics.md
docs/wrapper-kernel/: index.md
hooks/: version_hook.py
jumper_extension/: bali_adapter.py  bali_hook.py  utilities.py
jumper_extension/adapters/: reporter.py  session.py  visualizer.py
jumper_extension/config/: collectors.yaml  models.py  plots.yaml  utils.py
jumper_extension/core/: parsers.py  service.py  state.py
jumper_extension/ipython/: extension.py  magics.py
jumper_extension/monitor/: README.md  __init__.py  common.py  pipeline.py  sanity.py
jumper_extension/templates/: README.md
jumper_wrapper_kernel/: pyproject.toml
jumper_wrapper_kernel/jumper_wrapper_kernel/: kernel.py
latest/: sitemap.xml
overrides/partials/: source.html
pr-/: objects.inv
pr-39/: 404.html
pr-39/search/: search_index.json
pr-39/wrapper-kernel/: index.html
pr-40/: 404.html  index.html  objects.inv  sitemap.xml
pr-40/api/: index.html
pr-40/search/: search_index.json
pr-41/: index.html
pr-41/api/: index.html
tests/: conftest.py  test_data_handling.py  test_magic_commands.py  test_performance_monitor.py
(+138 files in other folders)
